objects/QuoteLineItemRates__c.object
<CustomObject>
    <fields>
        <fullName>Class_Code__c</fullName>
        <description>Class is used to indicate employee&apos;s class. Few of the examples are &apos;Out of State&apos;, &apos;Pre-65 Retiree&apos;, &apos;Hourly&apos;, &apos;Salary&apos;..</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class is used to indicate employee&apos;s calls. Few of the examples are &apos;Out of State&apos;, &apos;Pre-65 Retiree&apos;, &apos;Hourly&apos;, &apos;Salary&apos;..</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Category_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employment Category Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLineItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item Rates</relationshipLabel>
        <relationshipName>Quote_Line_Item_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_65_Spouse_Ch_Med_Elig__c</fullName>
        <label>Rate 65 Spouse Ch Med Elig</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_65_Spouse_Med_Elg__c</fullName>
        <label>Rate 65 Spouse Med Elg</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_EE_CHN__c</fullName>
        <label>Rate EE CHN</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_EE_Child__c</fullName>
        <label>Rate EE Child</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Embedded_Vision__c</fullName>
        <label>Rate Embedded Vision</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Family__c</fullName>
        <label>Rate Family</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Single__c</fullName>
        <label>Rate Single</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_TwoParty__c</fullName>
        <label>Rate TwoParty</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Line Item Rates</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QLIRATE-{00000000}</displayFormat>
        <label>Quote Line Item Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Item Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>